Bug Fix #3072 - Client UI bullet spacing

--- a/public/less/client.less
+++ b/public/less/client.less
@@ -17,6 +17,10 @@
   color:#DDD;
   margin: 0 20px 20px;
   word-wrap:break-word;
+
+  li {
+    line-height: 1.25em;
+  }
 }
 .buttonAnswers{
   list-style:none;
